-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 6
-
Component/s: hotspot
-
b04
-
generic
-
generic
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2207807 | 7 | Tom Rodriguez | P4 | Closed | Fixed | b134 |
Problem Description : fastdebug JVM crashes with assertion
# Internal Error (/BUILD_AREA/jdk7/hotspot/src/share/vm/compiler/compileBroker.cpp:946), pid=31733, tid=3084860304
# Error: assert(!instanceKlass::cast(method->method_holder())->is_not_initialized(),"method holder must be initialized")
JDK Release / Build : 6, 6u1 - 6u10, 7
Bits : fastdebug, both 32 and 64 bits
VM flavors : client | server
VM Modes : -Xmixed | -Xcomp
Java flags :
Platform(s) : all
Hostnames with OS info :
# Internal Error (/BUILD_AREA/jdk7/hotspot/src/share/vm/compiler/compileBroker.cpp:946), pid=31733, tid=3084860304
# Error: assert(!instanceKlass::cast(method->method_holder())->is_not_initialized(),"method holder must be initialized")
JDK Release / Build : 6, 6u1 - 6u10, 7
Bits : fastdebug, both 32 and 64 bits
VM flavors : client | server
VM Modes : -Xmixed | -Xcomp
Java flags :
Platform(s) : all
Hostnames with OS info :
- backported by
-
JDK-2207807 Assertion "method->method_holder())->is_not_initialized(),"method holder must be initialized"
-
- Closed
-