6725983: Assertion "method->method_holder())->is_not_initialized(),"method holder must be initialized"

Reviewed-by: kvn, iveresov